nodejs/versioned_docs/version-1.16/api/class-reporter.mdx
---
id: class-reporter
title: "Reporter"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Test runner notifies the reporter about various events during test execution. All methods of the reporter are optional.

You can create a custom reporter by implementing a class with some of the reporter methods. Make sure to export this class as default.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// my-awesome-reporter.ts
import { Reporter } from '@playwright/test/reporter';

class MyReporter implements Reporter {
  onBegin(config, suite) {
    console.log(`Starting the run with ${suite.allTests().length} tests`);
  }

  onTestBegin(test) {
    console.log(`Starting test ${test.title}`);
  }

  onTestEnd(test, result) {
    console.log(`Finished test ${test.title}: ${result.status}`);
  }

  onEnd(result) {
    console.log(`Finished the run: ${result.status}`);
  }
}
export default MyReporter;
```

</TabItem>
<TabItem value="js">

```js
// my-awesome-reporter.js
// @ts-check

/** @implements {import('@playwright/test/reporter').Reporter} */
class MyReporter {
  onBegin(config, suite) {
    console.log(`Starting the run with ${suite.allTests().length} tests`);
  }

  onTestBegin(test) {
    console.log(`Starting test ${test.title}`);
  }

  onTestEnd(test, result) {
    console.log(`Finished test ${test.title}: ${result.status}`);
  }

  onEnd(result) {
    console.log(`Finished the run: ${result.status}`);
  }
}

module.exports = MyReporter;
```

</TabItem>
</Tabs>

Now use this reporter with [testConfig.reporter](./api/class-testconfig.mdx#test-config-reporter). Learn more about [using reporters](./test-reporters.mdx).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// playwright.config.ts
import { PlaywrightTestConfig } from '@playwright/test';

const config: PlaywrightTestConfig = {
  reporter: './my-awesome-reporter.ts',
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  reporter: './my-awesome-reporter.js',
};

module.exports = config;
```

</TabItem>
</Tabs>

Here is a typical order of reporter calls:
* [reporter.onBegin(config, suite)](./api/class-reporter.mdx#reporter-on-begin) is called once with a root suite that contains all other suites and tests. Learn more about [suites hierarchy][Suite].
* [reporter.onTestBegin(test, result)](./api/class-reporter.mdx#reporter-on-test-begin) is called for each test run. It is given a [TestCase] that is executed, and a [TestResult] that is almost empty. Test result will be populated while the test runs (for example, with steps and stdio) and will get final `status` once the test finishes.
* [reporter.onStepBegin(test, result, step)](./api/class-reporter.mdx#reporter-on-step-begin) and [reporter.onStepEnd(test, result, step)](./api/class-reporter.mdx#reporter-on-step-end) are called for each executed step inside the test. When steps are executed, test run has not finished yet.
* [reporter.onTestEnd(test, result)](./api/class-reporter.mdx#reporter-on-test-end) is called when test run has finished. By this time, [TestResult] is complete and you can use [testResult.status](./api/class-testresult.mdx#test-result-status), [testResult.error](./api/class-testresult.mdx#test-result-error) and more.
* [reporter.onEnd(result)](./api/class-reporter.mdx#reporter-on-end) is called once after all tests that should run had finished.

Additionally, [reporter.onStdOut(chunk, test, result)](./api/class-reporter.mdx#reporter-on-std-out) and [reporter.onStdErr(chunk, test, result)](./api/class-reporter.mdx#reporter-on-std-err) are called when standard output is produced in the worker process, possibly during a test execution, and [reporter.onError(error)](./api/class-reporter.mdx#reporter-on-error) is called when something went wrong outside of the test execution.


- [reporter.onBegin(config, suite)](./api/class-reporter.mdx#reporter-on-begin)
- [reporter.onEnd(result)](./api/class-reporter.mdx#reporter-on-end)
- [reporter.onError(error)](./api/class-reporter.mdx#reporter-on-error)
- [reporter.onStdErr(chunk, test, result)](./api/class-reporter.mdx#reporter-on-std-err)
- [reporter.onStdOut(chunk, test, result)](./api/class-reporter.mdx#reporter-on-std-out)
- [reporter.onStepBegin(test, result, step)](./api/class-reporter.mdx#reporter-on-step-begin)
- [reporter.onStepEnd(test, result, step)](./api/class-reporter.mdx#reporter-on-step-end)
- [reporter.onTestBegin(test, result)](./api/class-reporter.mdx#reporter-on-test-begin)
- [reporter.onTestEnd(test, result)](./api/class-reporter.mdx#reporter-on-test-end)

## reporter.onBegin(config, suite) {#reporter-on-begin}
- `config`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-begin-option-config"/> &#60;[TestConfig]&#62; Resolved configuration.<a href="#reporter-on-begin-option-config" class="list-anchor">#</a>
- `suite`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-begin-option-suite"/> &#60;[Suite]&#62; The root suite that contains all projects, files and test cases.<a href="#reporter-on-begin-option-suite" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-begin-return"/> &#60;[void]&#62;<a href="#reporter-on-begin-return" class="list-anchor">#</a>

Called once before running tests. All tests have been already discovered and put into a hierarchy of [Suite]s.

## reporter.onEnd(result) {#reporter-on-end}
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-end-option-result"/> &#60;[Object]&#62; Result of the full test run.<a href="#reporter-on-end-option-result" class="list-anchor">#</a>
  - `status` &#60;"passed"|"failed"|"timedout"|"interrupted"&#62;
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-end-return"/> &#60;[Promise]<[void]>&#62;<a href="#reporter-on-end-return" class="list-anchor">#</a>

Called after all tests has been run, or testing has been interrupted. Note that this method may return a [Promise] and Playwright Test will await it.

## reporter.onError(error) {#reporter-on-error}
- `error`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-error-option-error"/> &#60;[TestError]&#62; The error.<a href="#reporter-on-error-option-error" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-error-return"/> &#60;[void]&#62;<a href="#reporter-on-error-return" class="list-anchor">#</a>

Called on some global error, for example unhandled exception in the worker process.

## reporter.onStdErr(chunk, test, result) {#reporter-on-std-err}
- `chunk`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-err-option-chunk"/> &#60;[string]|[Buffer]&#62; Output chunk.<a href="#reporter-on-std-err-option-chunk" class="list-anchor">#</a>
- `test`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-err-option-test"/> &#60;[void]|[TestCase]&#62; Test that was running. Note that output may happen when to test is running, in which case this will be [void].<a href="#reporter-on-std-err-option-test" class="list-anchor">#</a>
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-err-option-result"/> &#60;[void]|[TestResult]&#62; Result of the test run, this object gets populated while the test runs.<a href="#reporter-on-std-err-option-result" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-err-return"/> &#60;[void]&#62;<a href="#reporter-on-std-err-return" class="list-anchor">#</a>

Called when something has been written to the standard error in the worker process.

## reporter.onStdOut(chunk, test, result) {#reporter-on-std-out}
- `chunk`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-out-option-chunk"/> &#60;[string]|[Buffer]&#62; Output chunk.<a href="#reporter-on-std-out-option-chunk" class="list-anchor">#</a>
- `test`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-out-option-test"/> &#60;[void]|[TestCase]&#62; Test that was running. Note that output may happen when to test is running, in which case this will be [void].<a href="#reporter-on-std-out-option-test" class="list-anchor">#</a>
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-out-option-result"/> &#60;[void]|[TestResult]&#62; Result of the test run, this object gets populated while the test runs.<a href="#reporter-on-std-out-option-result" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-std-out-return"/> &#60;[void]&#62;<a href="#reporter-on-std-out-return" class="list-anchor">#</a>

Called when something has been written to the standard output in the worker process.

## reporter.onStepBegin(test, result, step) {#reporter-on-step-begin}
- `test`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-begin-option-test"/> &#60;[TestCase]&#62; Test that has been started.<a href="#reporter-on-step-begin-option-test" class="list-anchor">#</a>
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-begin-option-result"/> &#60;[TestResult]&#62; Result of the test run, this object gets populated while the test runs.<a href="#reporter-on-step-begin-option-result" class="list-anchor">#</a>
- `step`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-begin-option-step"/> &#60;[TestStep]&#62; Test step instance.<a href="#reporter-on-step-begin-option-step" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-begin-return"/> &#60;[void]&#62;<a href="#reporter-on-step-begin-return" class="list-anchor">#</a>

Called when a test step started in the worker process.

## reporter.onStepEnd(test, result, step) {#reporter-on-step-end}
- `test`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-end-option-test"/> &#60;[TestCase]&#62; Test that has been finished.<a href="#reporter-on-step-end-option-test" class="list-anchor">#</a>
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-end-option-result"/> &#60;[TestResult]&#62; Result of the test run.<a href="#reporter-on-step-end-option-result" class="list-anchor">#</a>
- `step`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-end-option-step"/> &#60;[TestStep]&#62; Test step instance.<a href="#reporter-on-step-end-option-step" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-step-end-return"/> &#60;[void]&#62;<a href="#reporter-on-step-end-return" class="list-anchor">#</a>

Called when a test step finished in the worker process.

## reporter.onTestBegin(test, result) {#reporter-on-test-begin}
- `test`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-test-begin-option-test"/> &#60;[TestCase]&#62; Test that has been started.<a href="#reporter-on-test-begin-option-test" class="list-anchor">#</a>
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-test-begin-option-result"/> &#60;[TestResult]&#62; Result of the test run, this object gets populated while the test runs.<a href="#reporter-on-test-begin-option-result" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-test-begin-return"/> &#60;[void]&#62;<a href="#reporter-on-test-begin-return" class="list-anchor">#</a>

Called after a test has been started in the worker process.

## reporter.onTestEnd(test, result) {#reporter-on-test-end}
- `test`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-test-end-option-test"/> &#60;[TestCase]&#62; Test that has been finished.<a href="#reporter-on-test-end-option-test" class="list-anchor">#</a>
- `result`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-test-end-option-result"/> &#60;[TestResult]&#62; Result of the test run.<a href="#reporter-on-test-end-option-result" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="reporter-on-test-end-return"/> &#60;[void]&#62;<a href="#reporter-on-test-end-return" class="list-anchor">#</a>

Called after a test has been finished in the worker process.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
